--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "classnames": "^2.3.2",
+    "lodash": "^4.17.21",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.15",
     "@types/react": "^18.0.26",
     "@typescript-eslint/eslint-plugin": "4.29.1",
