--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.0.7",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "next": "13.0.7",
     "react": "18.2.0",
